@@ -1,3 +1,9 @@
+2011-01-25  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
+
+	* Add FiltersToolbox/fspecial3.m
+
+	- FSPECIAL3  Create predefined 3-dimensional filters.
+
 2011-01-20  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
 
 	* FiltersToolbox/scinrrd_estimate_bias_field.m
